Preprocessing - added hole generation

--- a/00_dataset_prepreprocess.ipynb
+++ b/00_dataset_prepreprocess.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-26T22:49:55.241978Z",
-     "start_time": "2025-02-26T22:49:55.236029Z"
+     "end_time": "2025-03-21T13:33:42.658056Z",
+     "start_time": "2025-03-21T13:33:42.644797Z"
     }
    },
    "source": [
@@ -29,13 +29,13 @@
     "import yaml\n"
    ],
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-26T22:49:55.273816Z",
-     "start_time": "2025-02-26T22:49:55.262033Z"
+     "end_time": "2025-03-21T13:33:42.751843Z",
+     "start_time": "2025-03-21T13:33:42.709070Z"
     }
    },
    "cell_type": "code",
@@ -52,18 +52,19 @@
     "## AMOUNT OF DESIRED IMAGES\n",
     "im_amount = sets['dataset_size'] # there is 749 images in the database\n",
     "\n",
+    "\n",
     "## DATABASE FOLDER NAME\n",
     "dataset_destination_folder_name = sets['path_prepreprocessed_db']\n"
    ],
    "id": "79474082bdba9bfc",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-26T22:49:55.331828Z",
-     "start_time": "2025-02-26T22:49:55.319749Z"
+     "end_time": "2025-03-21T13:33:42.826154Z",
+     "start_time": "2025-03-21T13:33:42.799119Z"
     }
    },
    "cell_type": "code",
@@ -80,18 +81,21 @@
     "    folder_content = glob.glob(folder + os.sep + '*.jpg')\n",
     "    image_paths += folder_content\n",
     "\n",
+    "if im_amount == 'max':\n",
+    "    im_amount = len(image_paths)\n",
+    "\n",
     "# select random images\n",
     "image_paths = random.sample(image_paths, k=im_amount)\n"
    ],
    "id": "199fe0921de1a80b",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-26T22:49:55.421954Z",
-     "start_time": "2025-02-26T22:49:55.371150Z"
+     "end_time": "2025-03-21T13:33:44.300533Z",
+     "start_time": "2025-03-21T13:33:42.889241Z"
     }
    },
    "cell_type": "code",
@@ -118,7 +122,7 @@
    ],
    "id": "8e783822564791f1",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 7
   }
  ],
  "metadata": {
