added more training than before wow

--- a/00_1_dataset_prepreprocess.ipynb
+++ b/00_1_dataset_prepreprocess.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-01T21:44:01.168475Z",
-     "start_time": "2025-05-01T21:44:01.120276Z"
+     "end_time": "2025-05-03T22:40:55.033841Z",
+     "start_time": "2025-05-03T22:40:55.032024Z"
     }
    },
    "source": [
@@ -29,13 +29,13 @@
     "import yaml\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-30T00:25:42.400263Z",
-     "start_time": "2025-04-30T00:25:42.394333Z"
+     "end_time": "2025-05-03T22:40:55.052825Z",
+     "start_time": "2025-05-03T22:40:55.048575Z"
     }
    },
    "cell_type": "code",
@@ -58,13 +58,13 @@
    ],
    "id": "79474082bdba9bfc",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-30T00:25:42.453428Z",
-     "start_time": "2025-04-30T00:25:42.447196Z"
+     "end_time": "2025-05-03T22:40:55.099648Z",
+     "start_time": "2025-05-03T22:40:55.094331Z"
     }
    },
    "cell_type": "code",
@@ -75,10 +75,11 @@
     "\n",
     "all_folders = glob.glob(dataset_path + os.sep + '*')\n",
     "\n",
+    "print(all_folders)\n",
     "# get all paths of images\n",
     "image_paths = []\n",
     "for folder in all_folders:\n",
-    "    folder_content = glob.glob(folder + os.sep + '*.jpg')\n",
+    "    folder_content = glob.glob(folder + os.sep + '*.jpg') + glob.glob(folder + os.sep + '*.png')\n",
     "    image_paths += folder_content\n",
     "\n",
     "if im_amount == 'max':\n",
@@ -88,14 +89,22 @@
     "image_paths = random.sample(image_paths, k=im_amount)\n"
    ],
    "id": "199fe0921de1a80b",
-   "outputs": [],
-   "execution_count": 39
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/home/maciejka/Desktop/school/S8/labwork-project/db/input/weimar', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/leverkusen', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/hamburg', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/hanover', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/frankfurt', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/bochum', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/munich', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/stuttgart', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/berlin', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/bonn', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/krefeld', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/cologne', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/erfurt', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/zurich', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/aachen', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/day', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/munster', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/darmstadt', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/strasbourg', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/train', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/ulm', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/monchengladbach', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/jena', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/lindau', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/val', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/test', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/bielefeld', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/tubingen', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/bremen', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/mainz', '/home/maciejka/Desktop/school/S8/labwork-project/db/input/dusseldorf']\n"
+     ]
+    }
+   ],
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-30T00:25:43.053038Z",
-     "start_time": "2025-04-30T00:25:42.495402Z"
+     "end_time": "2025-05-03T22:40:56.068846Z",
+     "start_time": "2025-05-03T22:40:55.140962Z"
     }
    },
    "cell_type": "code",
@@ -112,7 +121,7 @@
     "# append new data into folder\n",
     "for i, image_path in enumerate(image_paths):\n",
     "    file_type = image_path.split('.')[-1]\n",
-    "    if file_type != \"jpg\":\n",
+    "    if file_type not in (\"jpg\", \"png\"):\n",
     "        print(\"Warning: {}: unsupported file type, skipping\".format(image_path))\n",
     "        continue\n",
     "\n",
@@ -122,7 +131,7 @@
    ],
    "id": "8e783822564791f1",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 41
   }
  ],
  "metadata": {
